# matrix_cal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze.cu  cuda_core.cu  hello-cuda.cu  main.cu  simple-fma.cu  tensor_core.cu  test.cu  workload-a.bash
